fix: inline code too small to read

--- a/_sass/otto/_code.scss
+++ b/_sass/otto/_code.scss
@@ -12,7 +12,7 @@ pre {
 code {
     padding-right: .1em;
     padding-left: .1em;
-    font-size: 85%;
+    font-size: 90%;
     font-style: normal;
     font-weight: normal;
     color: var(--code-color)
